update envlist